# TRS80

./: README.md
DE10-lite/: TRS80.qpf  TRS80.qsf  TRS80.qws  TRS80.vhd  pll.cmp  pll.vhd
rtl/: ff_port.vhd  k7_decoder.vhd  k7_encoder.vhd  kbd_matrix.vhd  model1v2.vhd  pal_shifter.vhd  prog_clock_divider.vhd  trs80_fdc.vhd  trs80_fdc_bridge.vhd  trs80_printer.vhd  trs80_serial.vhd  trs80mon.vhd  uart_receive.vhd  uart_send.vhd  video_screen.vhd
rtl/001/: EBR_RAM.vhd  clock_divider.vhd  model1.vhd  pal_ram.vhd  video_ctrl.vhd  video_ctrl.vhd.bak  video_dac.vhd.bak  video_ram.vhd  video_screen.vhd  video_screen.vhd.bak  video_shifter.vhd
rtl/CPU/247/: T80s.vhd
rtl/ROMS/: basic1.vhd  basic2v11.vhd  basic2v12.vhd  basic2v13.vhd  trs80mon.vhd
rtl/attic/: i8251_uart.vhd  pal_charset_trs80.vhd  pal_ctrl.vhd  pal_screen.vhd  sound_carrier.vhd
rtl/boards/: altair_88_2sio.vhd  altair_88_cpa.vhd  altair_88_pio.vhd  altair_88_sio.vhd
rtl/common/: clock_multiplier.vhd  hexto7seg.vhd  prog_clock_divider.vhd  std_ram.vhd
rtl/peripheral/: mc6850_uart.vhd
rtl/peripheral/common/: uart_receive.vhd  uart_send.vhd
rtl/peripheral/keyboard/: trs80_kbd_port.vhd
rtl/peripheral/serial/: trs80_serial.vhd
rtl/peripheral/video/: trs80_ctrl.vhd  trs80_dac.vhd  trs80_mcm6670.vhd  trs80_mcm6670p.vhd  trs80_mcm6674.vhd  trs80_screen.vhd  (+2 more)
rtl/roms/: diag.vhd  model1.vhd  screentest.vhd  trs80mon.vhd
software/: trs80mon.asm
usb-to-trs80-keyboard/: CMakeLists.txt  Makefile  cmake_install.cmake  kbd.h  kbd_map.h  kbd_ringbuffer.h  main.c  trs80.c  trs80.h  usb_hid.c
(+5 files in other folders)
